fix: solve layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 
 .button {
-  margin: 200px;
+  margin: 500px;
   background-color: transparent;
   color: #61dafb;
   border-radius: 5px;
@@ -35,7 +35,7 @@
 }
 
 img {
-  max-width: 600px;
+  max-width: 620px;
   max-height: 500px;
 }
 
@@ -46,6 +46,8 @@ img {
 .bar {
   margin: 30px;
   text-align: center;
+  align-items: center;
+  align-content: center;
   display: block;
 }
 
@@ -58,4 +60,8 @@ img {
 .card {
   margin: 20px;
   height: 637px;
+}
+
+.page-num {
+  margin: 20px;
 }
